strings anpassen, a4 css einsetzen

--- a/config/strings.yml
+++ b/config/strings.yml
@@ -14,7 +14,7 @@ E01:
   Bereich: Fachrichtung Heilpädagogik
 E04:
   Schulform: Fachschule im Bereich Sozialwesen
-  Bereich:
+  Bereich: Fachrichtung Sozialpädagogik
 
 E05:
   Schulform: Fachschule im Bereich Sozialwesen
