--- a/config/strings.yml
+++ b/config/strings.yml
@@ -24,6 +24,7 @@ E05:
   40-101-05: Fachrichtung Heilerziehungspflege #\nPraxisintegrierte Form
   40-102-05: Fachrichtung Sozialpädagogik #\nPraxisintegrierte Form
   Abschluss: true
+  Examen: Fachschulexamen
 D01:
   Schulform: Berufliches Gymnasium
   Bereich: Bildungsgang Erzieher/AHR\nSchwerpunkt Erziehung und Soziales
