--- a/config/testing.env
+++ b/config/testing.env
@@ -1,5 +1,6 @@
 S_ADAPTER=mysql2
-S_HOST=192.168.178.32
+# S_HOST=192.168.178.32
+S_HOST=localhost
 S_DB=schild_test
 S_USER=schild
 S_PASSWORD=schild
