--- a/traefik.toml
+++ b/traefik.toml
@@ -3,9 +3,10 @@ defaultEntryPoints = ["http"]
 [entryPoints]
     [entryPoints.http]
     address = ":80"
+    compress = true
 
-[web]
-address = ":8080"
+# [web]
+# address = ":8080"
 
 [docker]
 watch = true
